--- a/tests/index.jade
+++ b/tests/index.jade
@@ -7,6 +7,9 @@ html
 					It's me,
 			p
 				:trans(context=p1)
-					Foi!
+					Foo!
 				:trans(context=fanculo)
 					Geena
+			footer
+				:trans(context=footer)
+					(c) Me
